--- a/src/YourComponent.css
+++ b/src/YourComponent.css
@@ -1,86 +1,74 @@
-/* Style for the button */
-.my-button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border: 2px solid none;
-    background-color:#1863A8;
-    color: #fff;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-  }
+.his-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  border: 2px solid none;
+  background-color:#1863A8;
+  color: #fff;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
 
-  /* Hover effect */
-  .my-button:hover {
-    background-color: #114A7E;
-    color: #fff;
-  }
-  .my-button:active{
-      background-color:#7C98B1;
-  }
-  body {
-    margin: 0;
-    padding: 0;
-    background-image:url(Image/background.jpg);
-    background-repeat:no-repeat;
-    background-size:cover;
-  }
+/* Hover effect */
+.his-button:hover {
+  background-color: #114A7E;
+  color: #fff;
+}
+.his-button:active{
+    background-color:#7C98B1;
+}
+body {
+  margin: 0;
+  padding: 0;
+  background-repeat:no-repeat;
+  background-size:cover;
+}
 
-  .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: +100px;
-    background-color: #3498db; /* Change the background color as needed */
-    color: #fff; /* Change the text color as needed */
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 0 20px;
-    box-sizing: border-box;
-    background: linear-gradient(90deg, #4EB3DF 3.8%, rgba(44, 129, 166, 0.27) 87.86%);
+.navbar {
  
-  }
+  background: linear-gradient(90deg, #4EB3DF 3.8%, rgba(44, 129, 166, 0.27) 87.86%);
 
-  /* Style for the links */
-  .navbar a {
-    color: #fff; /* Change the text color as needed */
-    text-decoration: none;
-    font-size: 16px;
-    margin-left: 20px;
-  }
-  .parent-section{
-      width:100%;
-      margin-top:50px;
-      
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      flex-direction:column;
-     
-  }
-  .container{
-      background-color: #ffffff;
-      padding:40px;
-      border-radius:5px;
-  }
-  .inlinediv{
-      display:flex;
-      gap:20px;
-      margin:10px;
-      
-  }
-  .my-button-edit{
-      justify-content:center;
-      width:35px;
-      height:45px;
-  }
+}
 
-  /* so this is code for the popup */
-  .modal {
+/* Style for the links */
+.navbar a {
+  color: #fff; /* Change the text color as needed */
+  text-decoration: none;
+  font-size: 16px;
+  margin-left: 20px;
+}
+.parent-section{
+    width:100%;
+    margin-top:250px;
+    
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    flex-direction:column;
+   
+}
+.container{
+    background-color: #ffffff;
+    padding:40px;
+    border-radius:5px;
+}
+.inlinediv{
+    display:flex;
+    gap:20px;
+    margin:10px;
+    
+}
+.his-button-edit{
+    justify-content:center;
+    width:35px;
+    height:45px;
+}
+
+/* so this is code for the popup */
+.modal {
 display: none;
 position: fixed;
 top: 0;
@@ -123,7 +111,7 @@ font-size: 16px;
 #uploadBtn {
 margin-top: 10px;
 padding: 10px 20px;
-  justify-content: center;
+justify-content: center;
 color: #fff;
 border: none;
 border-radius: 5px;
@@ -145,7 +133,7 @@ text-align: center;
 padding: 10px;
 }
 .blue_header{
-  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color:#3498db;
-  font-size:700px;
+font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+color:#3498db;
+font-size:700px;
 }
